--- a/servicios/bases-de-datos.html
+++ b/servicios/bases-de-datos.html
@@ -102,14 +102,18 @@ permalink: /servicios/bases-de-datos
                 </table>
             </div>
             <div class="message-area ">
-                    <div class="col-sm-12 col-md-6">
+                    <div class="col-sm-12 col-md-6" style="text-align: right;">
                             <div class="text-other-color1">Toda la lista por</div>
                             <div class="text-other-color2">solamente <strong>$750 MXN</strong>*</div>
                             <p>* por tiempo limitado</p>
                         </div>
                         <div class="col-sm-12 col-md-6">
                             <div class="buttons-holder">
-                                <a href="#" class="ybtn ybtn-accent-color">Comprar ahora</a>
+                                <!-- <a href="#" class="ybtn ybtn-accent-color">Comprar ahora</a> -->
+                                <a href="https://transactions.sendowl.com/products/78060298/608A9083/purchase" rel="nofollow">
+                                    <img src="{{site.url}}/images/paypal.png" width="200"/>
+                                </a>
+                                <script type="text/javascript" src="https://transactions.sendowl.com/assets/sendowl.js" ></script>
                             </div>
                         </div>
             </div>
